@@ -731,6 +731,8 @@ An end of a defun is found by moving forward from the beginning of one."
 	 (add-hook 'ruby-mode-hook
 	    '(lambda ()
 	       (make-local-variable 'font-lock-defaults)
+	       (make-local-variable 'font-lock-keywords)
+	       (make-local-variable 'font-lock-syntactic-keywords)
 	       (setq font-lock-defaults '((ruby-font-lock-keywords) nil nil))
 	       (setq font-lock-keywords ruby-font-lock-keywords)
 	       (setq font-lock-syntactic-keywords ruby-font-lock-syntactic-keywords)))))
